--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,10 @@ header {
     background: url('http://redbike.rs/gui/main_bnd.jpg');
     background-size: 100%;
     position: fixed;
+    z-index: 100;
     top: 0;
+    border: 2px solid rgba(0, 0, 0, 0.8);
+    border-bottom: none;
 }
 
 header img {
@@ -53,6 +56,7 @@ nav {
     top: 0px;
     margin-top: 65px; 
     z-index: 10;
+    border: 2px solid rgba(0, 0, 0, 0.8);
 }
 
 nav ul {
@@ -73,11 +77,12 @@ nav li a, .dropbtn {
     text-align: center;
     padding: 7px 15px;
     text-decoration: none;
+    transition: all 0.3s;
 }
 
 nav li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-    text-shadow: 1px 1px 1px black;
+    background-color: rgba(255, 0, 0, 0.5);
+    text-shadow: 1px 1px 2px black;
 }
 
 nav li.dropdown {
@@ -87,14 +92,14 @@ nav li.dropdown {
 nav .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: rgba(51, 51, 51, 0.95);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 nav .dropdown-content a {
-    color: black;
+    color: white;
     padding: 7px 15px;
     text-decoration: none;
     display: block;
@@ -102,14 +107,17 @@ nav .dropdown-content a {
     /* position: relative; */
 }
 
-nav .dropdown-content {
-    overflow-y: scroll;
-}
 
-nav .dropdown-content a:hover {background-color: #f1f1f1}
+nav .dropdown-content a:hover {
+    background-color: #d1cdcd;
+}
 
 nav .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.active {
+    background: red;
 }
 
 /*==== MAIN ====*/
@@ -128,27 +136,32 @@ main .content {
     overflow: hidden;
     padding-right: 10px;
     padding-left: 10px;
+    border: 2px solid rgba(0, 0, 0, 0.8);
+    border-top: none;
+    border-bottom: none;
 }
 
 .content img.img-1 {
     width: 25%;
- /* height: 290px;*/
     margin-right: 10px;
     margin-top: 10px;
     display: inline;
+    transition: all  0.3s;
+    box-shadow: 2px 2px 2px black;
 }
 
 .content img.img-2 {
     width: 25%;
- /* height: 290px;*/
     margin-left: 10px;
     margin-top: 10px;
     display: inline;
+    transition: all  0.3s;
+    box-shadow: 2px 2px 2px black;
 }
 
-.content img:hover {
+.content img.img-1:hover, .content img.img-2:hover  {
   opacity: 0.8;
-  box-shadow: 1px 1px 3px red;
+  width: 25%;
 }
 
 .float-left {
@@ -168,6 +181,8 @@ main .content {
     display: block;
     width: 70%;
     font-weight: 600;
+    padding-bottom: 5px;
+    border-bottom: 2px solid red;
 }
 
 .content h1 {
@@ -182,11 +197,17 @@ main aside {
     padding: 10px;
     background: rgba(0,0,0,0.1);
     float: right;
-    height: 100%;
+    height: 1807px;
+    border: 2px solid rgba(0, 0, 0, 0.8);
+    border-left: none;
 }
 
 .index-footer {
     margin-top: 80px;
+}
+
+.indent {
+    text-indent: 0.8rem;
 }
 
 /*==== FOOTER ====*/
@@ -198,6 +219,7 @@ footer {
     background: url('https://images.pexels.com/photos/4941/red-pattern-texture-lines.jpg?auto=compress&cs=tinysrgb&h=650&w=940');
     background-size: 100%;
     height: 65px;
+    border: 2px solid rgba(0, 0, 0, 0.8);
 }
 
 
