--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,19 @@ main aside.he-kosarka {
     height: 2494px;
 }
 
+main aside iframe, main aside img {
+    width: 100%;
+    transition: all 0.3s;
+}
+
+aside img:hover {
+    opacity: 0.8;
+}
+
+main aside .text-center {
+    text-align: left;
+}
+
 .index-footer {
     margin-top: 80px;
 }
