--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,12 @@ header img {
     height: 100%;
     padding: 5px;
     border-radius: 50%;
-    box-shadow: 1px 1px 2px red;
-    display: inline-block;
+		display: inline-block;
+		transition: all 0.4s;
+}
+
+header img:hover {
+	opacity: 0.7;
 }
 
 header h1 {
@@ -46,6 +50,11 @@ header h1 {
     margin: 10px 15px 0 0;
     text-shadow: 2px 2px 5px black;
     color: floralwhite;
+}
+
+header .kk-img img {
+	padding: 2;
+	border-radius: 20%;
 }
 
 /*==== NAVBAR ====*/
@@ -118,6 +127,7 @@ nav .dropdown:hover .dropdown-content {
 
 .active {
     background: red;
+    text-shadow: 1px 1px 1px black;
 }
 
 /*==== MAIN ====*/
@@ -224,7 +234,7 @@ main aside .text-center {
 }
 
 .index-footer {
-    margin-top: 80px;
+    margin-top: 115px;
 }
 
 .indent {
@@ -237,12 +247,32 @@ footer {
     width: 1000px;
     position: fixed;
     bottom: 0;
-    background: url('https://images.pexels.com/photos/4941/red-pattern-texture-lines.jpg?auto=compress&cs=tinysrgb&h=650&w=940');
-    background-size: 100%;
-    height: 65px;
-    border: 2px solid rgba(0, 0, 0, 0.8);
+    /* background: url('https://images.pexels.com/photos/4941/red-pattern-texture-lines.jpg?auto=compress&cs=tinysrgb&h=650&w=940');
+    background-size: 100%; */
+    background: linear-gradient(360deg, rgb(175, 5, 5), rgb(255, 225, 225) 290%), 
+                linear-gradient(0deg, rgb(160, 160, 160), rgb(212, 11, 11) 100%), 
+                linear-gradient(0deg, rgb(161, 76, 76), rgb(117, 110, 110) 150%);
+    height: 100px;
+		border: 2px solid rgba(0, 0, 0, 0.8);
+		box-sizing: border-box;
 }
 
+footer .stadion, footer .karte {
+	display: inline-block;
+	box-sizing: border-box;
+	width: 50%;
+	color: whitesmoke;
+	text-shadow: 1px 1px 3px black;
+	text-indent: 6rem;
+}
+
+footer .stadion {
+	float: left;
+}
+
+footer .karte {
+	float: right;
+}
 
 
 
