--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,16 @@ nav {
 
 nav ul {
     list-style-type: none;
-    margin: 0;
+		margin: 0;
+		min-height: 33px;
     padding: 0;
     overflow: hidden;
     background-color: #333;
 }
 
 nav li {
-    float: left;
+		float: left;
+		font-size: 0.99rem;
 }
 
 nav li a, .dropbtn {
@@ -91,7 +93,11 @@ nav li a, .dropbtn {
 
 nav li a:hover, .dropdown:hover .dropbtn {
     background-color: rgba(255, 0, 0, 0.5);
-    text-shadow: 1px 1px 2px black;
+		text-shadow: 1px 1px 2px black;
+}
+
+nav li a:hover, .dropdown:hover {
+  font-size: 1rem;
 }
 
 nav li.dropdown {
@@ -233,6 +239,24 @@ main aside .text-center {
     text-align: left;
 }
 
+aside .wiki-sd a {
+	display: block;
+	text-align: center;
+	background: rgba(255, 0, 0, 0.6);
+	padding: 5px;
+	letter-spacing: 2px;
+	font-weight: 700;
+	text-decoration: none;
+	color: #e9e9e1;
+	margin-bottom: 5px;
+	text-shadow: 1px 1px 1px black;
+	transition: all 0.3s;
+}
+
+aside .wiki-sd a:hover {
+opacity: 0.7;
+}
+
 .index-footer {
     margin-top: 115px;
 }
@@ -249,12 +273,28 @@ footer {
     bottom: 0;
     /* background: url('https://images.pexels.com/photos/4941/red-pattern-texture-lines.jpg?auto=compress&cs=tinysrgb&h=650&w=940');
     background-size: 100%; */
-    background: linear-gradient(360deg, rgb(175, 5, 5), rgb(255, 225, 225) 290%), 
+    /* background: linear-gradient(360deg, rgb(175, 5, 5), rgb(255, 225, 225) 290%), 
                 linear-gradient(0deg, rgb(160, 160, 160), rgb(212, 11, 11) 100%), 
-                linear-gradient(0deg, rgb(161, 76, 76), rgb(117, 110, 110) 150%);
+								linear-gradient(0deg, rgb(161, 76, 76), rgb(117, 110, 110) 150%); */
+		background: url('http://redbike.rs/gui/main_bnd.jpg');
+		background-size: cover; 
     height: 100px;
 		border: 2px solid rgba(0, 0, 0, 0.8);
 		box-sizing: border-box;
+}
+
+footer a {
+	text-decoration: none;
+	display: inline;
+	color: #e9e9e1;
+	text-shadow: 1px 1px 1px black;
+	transition: all 0.3s;
+}
+
+footer a:hover {
+	opacity: 0.8;
+	padding: 5px;
+	background: rgba(0, 0, 0, 0.4);
 }
 
 footer .stadion, footer .karte {
@@ -262,8 +302,9 @@ footer .stadion, footer .karte {
 	box-sizing: border-box;
 	width: 50%;
 	color: whitesmoke;
+	padding: 20px;
+	text-indent: 1.7rem;
 	text-shadow: 1px 1px 3px black;
-	text-indent: 6rem;
 }
 
 footer .stadion {
