--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,43 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    box-sizing: border-box;
-    text-align: justify;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
+  text-align: justify;
 }
 
 body {
-    background: #e9e9e1;
+  background: #e9e9e1;
 }
 
 .d-block {
-    display: block;
+  display: block;
 }
 
 /*==== Container ====*/
 .container {
-    width: 1000px;
-    margin: 0 auto;
+  width: 1000px;
+  margin: 0 auto;
 }
 
 /*==== HEADER ====*/
 
 header {
-    width: 1000px;
-    height: 65px;
-    background: url('http://redbike.rs/gui/main_bnd.jpg');
-    background-size: 100%;
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    border: 2px solid rgba(0, 0, 0, 0.8);
-    border-bottom: none;
+  width: 1000px;
+  height: 65px;
+  background: url('http://redbike.rs/gui/main_bnd.jpg');
+  background-size: 100%;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  border-bottom: none;
 }
 
 header img {
-    height: 100%;
-    padding: 5px;
-    border-radius: 50%;
-		display: inline-block;
-		transition: all 0.4s;
+  height: 100%;
+  padding: 5px;
+  border-radius: 50%;
+  display: inline-block;
+  transition: all 0.4s;
 }
 
 header img:hover {
@@ -45,11 +45,11 @@ header img:hover {
 }
 
 header h1 {
-    display: inline-block;
-    float: right;
-    margin: 10px 15px 0 0;
-    text-shadow: 2px 2px 5px black;
-    color: floralwhite;
+  display: inline-block;
+  float: right;
+  margin: 10px 15px 0 0;
+  text-shadow: 2px 2px 5px black;
+  color: floralwhite;
 }
 
 header .kk-img img {
@@ -60,40 +60,40 @@ header .kk-img img {
 /*==== NAVBAR ====*/
 
 nav {
-    width: 1000px;
-    position: fixed;
-    top: 0px;
-    margin-top: 65px; 
-    z-index: 10;
-    border: 2px solid rgba(0, 0, 0, 0.8);
+  width: 1000px;
+  position: fixed;
+  top: 0px;
+  margin-top: 65px; 
+  z-index: 10;
+  border: 2px solid rgba(0, 0, 0, 0.8);
 }
 
 nav ul {
-    list-style-type: none;
-		margin: 0;
-		min-height: 33px;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+  list-style-type: none;
+  margin: 0;
+  min-height: 33px;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
 nav li {
-		float: left;
-		font-size: 0.99rem;
+  float: left;
+  font-size: 0.99rem;
 }
 
 nav li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 7px 15px;
-    text-decoration: none;
-    transition: all 0.3s;
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 7px 15px;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
 nav li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgba(255, 0, 0, 0.5);
-		text-shadow: 1px 1px 2px black;
+  background-color: rgba(255, 0, 0, 0.5);
+  text-shadow: 1px 1px 2px black;
 }
 
 nav li a:hover, .dropdown:hover {
@@ -101,78 +101,78 @@ nav li a:hover, .dropdown:hover {
 }
 
 nav li.dropdown {
-    display: inline-block;
+  display: inline-block;
 }
 
 nav .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: rgba(51, 51, 51, 0.95);
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: rgba(51, 51, 51, 0.95);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
 nav .dropdown-content a {
-    color: white;
-    padding: 7px 15px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    /* position: relative; */
+  color: white;
+  padding: 7px 15px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  /* position: relative; */
 }
 
 
 nav .dropdown-content a:hover {
-    background-color: #d1cdcd;
+  background-color: #d1cdcd;
 }
 
 nav .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
 .active {
-    background: red;
-    text-shadow: 1px 1px 1px black;
+  background: red;
+  text-shadow: 1px 1px 1px black;
 }
 
 /*==== MAIN ====*/
 
 main {
-    width: 1000px;
-    margin-top: 98px;
+  width: 1000px;
+  margin-top: 98px;
 }
 
 main .content {
-    width: 800px;
-    height: 100%;
-    background: #f2efef;
-    float: left;
-    clear: both;
-    overflow: hidden;
-    padding-right: 10px;
-    padding-left: 10px;
-    border: 2px solid rgba(0, 0, 0, 0.8);
-    border-top: none;
-    border-bottom: none;
+  width: 800px;
+  height: 100%;
+  background: #f2efef;
+  float: left;
+  clear: both;
+  overflow: hidden;
+  padding-right: 10px;
+  padding-left: 10px;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  border-top: none;
+  border-bottom: none;
 }
 
 .content img.img-1 {
-    width: 25%;
-    margin-right: 10px;
-    margin-top: 10px;
-    display: inline;
-    transition: all  0.3s;
-    box-shadow: 2px 2px 2px black;
+  width: 25%;
+  margin-right: 10px;
+  margin-top: 10px;
+  display: inline;
+  transition: all  0.3s;
+  box-shadow: 2px 2px 2px black;
 }
 
 .content img.img-2 {
-    width: 25%;
-    margin-left: 10px;
-    margin-top: 10px;
-    display: inline;
-    transition: all  0.3s;
-    box-shadow: 2px 2px 2px black;
+  width: 25%;
+  margin-left: 10px;
+  margin-top: 10px;
+  display: inline;
+  transition: all  0.3s;
+  box-shadow: 2px 2px 2px black;
 }
 
 .content img.img-1:hover, .content img.img-2:hover  {
@@ -181,64 +181,64 @@ main .content {
 }
 
 .float-left {
-    float: left;
+  float: left;
 }
 
 .float-right {
-    float: right;
+  float: right;
 }
 
 .content p {
-    display: inherit;
-    text-align: justify;
+  display: inherit;
+  text-align: justify;
 }
 
 .content p.d-block {
-    display: block;
-    width: 70%;
-    font-weight: 600;
-    padding-bottom: 5px;
-    border-bottom: 2px solid red;
+  display: block;
+  width: 70%;
+  font-weight: 600;
+  padding-bottom: 5px;
+  border-bottom: 2px solid red;
 }
 
 .content h1 {
-    color: black;
-    padding: 10px 0;
-    margin: 0;
-    text-shadow: 1px 1px 3px white;
+  color: black;
+  padding: 10px 0;
+  margin: 0;
+  text-shadow: 1px 1px 3px white;
 }
 
 main aside {
-    width: 200px;
-		padding: 10px;
-		/* position: fixed; */
-		/* margin-left: 800px; */
-    background: rgba(0,0,0,0.1);
-    float: right;
-    height: 1807px;
-    border: 2px solid rgba(0, 0, 0, 0.8);
-    border-left: none;
+  width: 200px;
+  padding: 10px;
+  /* position: fixed; */
+  /* margin-left: 800px; */
+  background: rgba(0,0,0,0.1);
+  float: right;
+  height: 1807px;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  border-left: none;
 }
 
 main aside.he-fudbal {
-    height: 2378px;
+  height: 2378px;
 }
 
 main aside.he-kosarka {
-    height: 2494px;
+  height: 2494px;
 }
 
 main aside iframe, main aside img {
-    width: 100%;
-    transition: all 0.3s;
+  width: 100%;
+  transition: all 0.3s;
 }
 
 aside img:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 main aside .text-center {
-    text-align: left;
+  text-align: left;
 }
 
 aside .wiki-sd a {
@@ -256,45 +256,43 @@ aside .wiki-sd a {
 }
 
 aside .wiki-sd a:hover {
-opacity: 0.7;
+  opacity: 0.6;
 }
 
 .index-footer {
-    margin-top: 115px;
+  margin-top: 115px;
 }
 
 .indent {
-    text-indent: 0.8rem;
+  text-indent: 0.8rem;
 }
 
 /*==== FOOTER ====*/
 
 footer {
-    width: 1000px;
-    position: fixed;
-    bottom: 0;
-    /* background: url('https://images.pexels.com/photos/4941/red-pattern-texture-lines.jpg?auto=compress&cs=tinysrgb&h=650&w=940');
-    background-size: 100%; */
-    /* background: linear-gradient(360deg, rgb(175, 5, 5), rgb(255, 225, 225) 290%), 
-                linear-gradient(0deg, rgb(160, 160, 160), rgb(212, 11, 11) 100%), 
-								linear-gradient(0deg, rgb(161, 76, 76), rgb(117, 110, 110) 150%); */
-		background: url('http://redbike.rs/gui/main_bnd.jpg');
-		background-size: cover; 
-    height: 100px;
-		border: 2px solid rgba(0, 0, 0, 0.8);
-		box-sizing: border-box;
+  width: 1000px;
+  position: fixed;
+  bottom: 0;
+  background: url('http://redbike.rs/gui/main_bnd.jpg');
+  background-size: cover; 
+  height: 100px;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  box-sizing: border-box;
 }
 
 footer a {
-	text-decoration: none;
-	display: inline;
-	color: #e9e9e1;
-	text-shadow: 1px 1px 1px black;
-	transition: all 0.3s;
+  text-decoration: none;
+  margin-top: 5px;
+  display: block;
+  padding-top: 5px;
+  color: #e9e9e1;
+  text-align: center;
+  text-shadow: 1px 1px 1px black;
+  transition: all 0.3s;
 }
 
 footer a:hover {
-	opacity: 0.8;
+	opacity: 0.7;
 	padding: 5px;
 	background: rgba(0, 0, 0, 0.4);
 }
@@ -305,8 +303,8 @@ footer .stadion, footer .karte {
 	width: 50%;
 	color: whitesmoke;
 	padding: 20px;
-	text-indent: 1.7rem;
-	text-shadow: 1px 1px 3px black;
+  text-shadow: 1px 1px 3px black;
+  padding-top: 10px;
 }
 
 footer .stadion {
