--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ main .content {
   border: 2px solid rgba(0, 0, 0, 0.8);
   border-top: none;
   border-bottom: none;
+  border-right: none;
 }
 
 .content img.img-1 {
